# yhack

./: .gitignore  design.md  ideas.md  video.md
backend/: .env.example  Cargo.toml  Dockerfile  database.db  fly.toml  reset_db.sh
backend/migrations/: 001_init.sql  002_add_meetups.sql
backend/src/: auth.rs  db.rs  email.rs  error.rs  main.rs  meetups.rs  middleware.rs  profile.rs  questions.rs  starter_questions.rs  types.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AuthFlow.tsx  MeetupsView.tsx  ProfileFeed.tsx  QuestionInbox.tsx
